data/derived/comb/progs/unify/prog0716.ml.out
Characters 18-25:
  let g3 () = build (6,7,8);;
                    ^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type (int * int -> int) * int
